--- a/sass/_values.scss
+++ b/sass/_values.scss
@@ -8,10 +8,9 @@ body {
     padding: 0;
     box-sizing: border-box;
     background: white;
-    height: 100vh;
     font-family: 'Inter', sans-serif;
-    margin: 10px 0;
     background: linear-gradient(-45deg, #023d7d4f, #001845, #001233, #7d8597);
+    margin-top: -7px;
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     transform: scale(0.95);
