--- a/sass/_values.scss
+++ b/sass/_values.scss
@@ -11,6 +11,7 @@ body {
     font-family: 'Inter', sans-serif;
     background: linear-gradient(-45deg, #023d7d4f, #001845, #001233, #7d8597);
     margin-top: -7px;
+    margin-bottom: 17px;
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     transform: scale(0.95);
