--- a/css/stlye.css
+++ b/css/stlye.css
@@ -74,9 +74,8 @@ body {
   box-sizing: border-box;
   background: white;
   font-family: "Inter", sans-serif;
+  margin: 20px 0;
   background: linear-gradient(-45deg, rgba(2, 61, 125, 0.3098039216), #001845, #001233, #7d8597);
-  margin-top: -7px;
-  margin-bottom: 17px;
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
