--- a/sass/_values.scss
+++ b/sass/_values.scss
@@ -9,9 +9,8 @@ body {
     box-sizing: border-box;
     background: white;
     font-family: 'Inter', sans-serif;
+    margin: 20px 0;
     background: linear-gradient(-45deg, #023d7d4f, #001845, #001233, #7d8597);
-    margin-top: -7px;
-    margin-bottom: 17px;
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     transform: scale(0.95);
