--- a/css/stlye.css
+++ b/css/stlye.css
@@ -70,12 +70,11 @@ html {
 
 body {
   height: 100vh;
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: white;
   font-family: "Inter", sans-serif;
-  margin: 20px 0;
+  margin: 20px 0 !important;
   background: linear-gradient(-45deg, rgba(2, 61, 125, 0.3098039216), #001845, #001233, #7d8597);
   background-size: 400% 400%;
   -webkit-animation: gradient 15s ease infinite;
