--- a/sass/_values.scss
+++ b/sass/_values.scss
@@ -5,12 +5,11 @@ html {
 
 body {
     height: 100vh;
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
     background: white;
     font-family: 'Inter', sans-serif;
-    margin: 20px 0;
+    margin: 20px 0 !important;
     background: linear-gradient(-45deg, #023d7d4f, #001845, #001233, #7d8597);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
