--- a/css/stlye.css
+++ b/css/stlye.css
@@ -45,6 +45,9 @@
   align-items: center;
   justify-content: space-around;
 }
+.container .main-box .input-section h1 {
+  margin-top: 20px;
+}
 .container .main-box .converted-section {
   display: grid;
   grid-gap: 23.43px;
@@ -158,13 +161,17 @@ p {
 
 button {
   font-size: 1em;
-  border: none;
+  font-weight: 600;
+  background: rgba(16, 33, 64, 0.4862745098);
+  color: white !important;
+  border: 1px solid white !important;
   color: #3D3D3D;
-  width: 117px;
+  width: 110px;
   height: 42px;
   border-radius: 5px;
   cursor: pointer;
   transition: 0.5s ease-in-out;
+  margin-bottom: 24px;
 }
 button:hover {
   transform: scale(1.05);
