--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -49,6 +49,10 @@
             align-items: center;
             justify-content: space-around;
 
+            h1 {
+                margin-top: 20px;
+            }
+
         }
 
         .converted-section {
