--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  overflow-y: scroll;
 }
 .container .main-box .converted-section .box h2 {
   color: #5A537B;
