--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -11,6 +11,7 @@
         height: 729px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
+
         .darkMode {
             position: absolute;
             top: 294px;
@@ -67,6 +68,7 @@
                 flex-direction: column;
                 justify-content: space-evenly;
                 align-items: center;
+                overflow-y: scroll;
 
                 h2 {
                     color: #5A537B;
